--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,12 @@
+@import '_settings.scss';
+@import 'foundation-sites/scss/foundation';
+// Global styles
+@import "topbar-responsive";
+@include foundation-everything();
+
+.top-bar{
+  background-color: $topbar-responsive-bg;
+}
 .App {
   text-align: center;
 }
@@ -9,8 +18,9 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: $button-background-hover;
   min-height: 100vh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,3 +41,5 @@
     transform: rotate(360deg);
   }
 }
+
+
