Rearrange nav-bar, create components folder, style nav

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -18,7 +18,7 @@
 }
 
 .App-header {
-  background-color: $button-background-hover;
+  background-color: whitesmoke;
   min-height: 100vh;
 
   display: flex;
