--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -1,4 +1,4 @@
-$primaryColour: #3da6ff;
+$primaryColour: #66B3FF;
 $topbar-responsive-bg: #2c3840;
 $topbar-responsive-animation-type: fade-in; // or use slide-down or none
 $font-color-landing: red;
